--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
         <p>Dear Colter Wolter,<br><br>Sorry for the late April Fool's Day prank, but I had to show off my incredible coding skills.
         How else are you going to see how much those Computer Science classes have paid off? Personally, I agree with your mom - I think you
         should take CS too. I might be a little bit biased, but it's so much fun. And you can make websites whenever you want! My portfolio is already
-        so huge! Just think about all the incredible possibilities!<br><br>I hope school is going well for you. One final push and then it's summer and we are home free.
-        However then after that you'll have to start thinking about what you're going to do with your life because you'll be a senior (loser).
-        Don't despair, I'll be thinking about the same things, because next year I'll be a junior in college. I took so many credits in HS that if things go well,
-        I'm going to graduate a year early - technically right now, I'm a sophomore. It's so scary.<br><br>I just went over some paperwork for my apartment next
+        so huge! Just think about all the incredible possibilities! I don't think I'm actually going to change this to my major,
+        but I'm considering making it my minor and keeping my business admin major.<br><br>I hope school is going well for you! Spring always feels
+        like the longest season to me. I hate being stuck inside in class when it's beautiful out. It feels like I'm being held hostage. But it's okay, we're soo close to summer. I can't wait to
+        come home and swim in my pool and lay in the sun and hang out with my dog and see you as much as I can before school starts again. 
+        Are you excited to be a senior next year and decide what to do with the rest of your life? If it seems daunting to you, don't worry. I'll be in the same boat but just a slightly larger scale:
+        if everything goes according to plan I'll be a junior in college because of all the credits I took in high school. That means that I have
+        to find a REAL job at a REAL company doing something that I actually want to do, hopefully as a career, hopefully for the rest of my life. So scary.<br><br>I just went over some paperwork for my apartment next
         year, and it's all starting to feel so real. I can't wait, I hope you can come visit me there next year. Speaking of visiting, I'm sorry for being mean about
-        it on the phone the other day. It just really breaks my heart when you talk about wanting to visit but it never happens. I would love for you
-        to visit me, but my heart is too big and fragile and my hopes get up too high, so they both get crushed very easily.<br><br>I need to do my actual coding assignment 
+        it on the phone the other day. It just breaks my heart a little when you talk about wanting to visit but it never happens. I would love for you
+        to visit me, but my heart is too big and fragile and my hopes get up too high, so they both get crushed very easily. Its not your fault, it's all me, trust.<br><br>I need to do my actual coding assignment 
         now, so I'll end this letter here. I hope you have an amazing month. I'll see you in June. I miss you a lot a lot a lot bestie. Tell your mom hi for me and tell 
         her that I miss her too. I love you!</p>
         <p>♡♡,<br>Lucy</p>
