--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <h1>April Fools!</h1>
-        <p>I got you so good, didn't I? <br> Here is my real letter, because I'm not trying to plagarize Mary's heart and soul.</p>
+        <p>I got you so good, didn't I? <br> Here is my real letter, because I'm not trying to plagarize Mary's heart and soul. I do have a question though: If you were Arthur,
+        would you choose a life with Mary and say to hell with the revenge and money and everything else?</p>
         <p>Dear Colter Wolter,<br><br>Sorry for the late April Fool's Day prank, but I had to show off my incredible coding skills.
         How else are you going to see how much those Computer Science classes have paid off? Personally, I agree with your mom - I think you
         should take CS too. I might be a little bit biased, but it's so much fun. And you can make websites whenever you want! My portfolio is already
